force-app/main/default/objects/leaseworks__Adjusted_Interval_Ratio__c/leaseworks__Adjusted_Interval_Ratio__c.object-meta.xml
<CustomObject>
    <description>Child Object is used to store the data for MR Computations.
Adjusted Interval will be used for MR Computations only</description>
    <label>Z_Unused_2507 Adjusted Interval (Ratio)</label>
    <nameField>
        <label>Ratio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2507 Adjusted Interval (Ratio)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>