force-app/main/default/objects/leaseworks__Adjusted_Interval_Ratio__c/fields/leaseworks__Adjusted_Interval_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjusted_Interval_Hours__c</fullName>
    <description>Adjusted Interval in hours that will be used to calculate MR Rate</description>
    <inlineHelpText>Adjusted Interval in hours that will be used to calculate MR Rate</inlineHelpText>
    <label>Adjusted Interval (Hours)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>