force-app/main/default/objects/leaseworks__Adjusted_Interval_Ratio__c/fields/leaseworks__Composite_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Composite_Key_Field__c</fullName>
    <description>This field is used to avoid duplicate records under same Maintenance Program Event Catalog.</description>
    <label>_Duplicate Check Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>