force-app/main/default/objects/leaseworks__Adjusted_Interval_Ratio__c/fields/leaseworks__Cost_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_per_Hour__c</fullName>
    <description>Cost per Hour</description>
    <formula>leaseworks__Cost__c / leaseworks__Adjusted_Interval_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost per Hour</inlineHelpText>
    <label>Z_Unused_2507 Cost per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>