force-app/main/default/objects/leaseworks__Adjusted_Interval_Ratio__c/fields/leaseworks__External_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This hidden field is used for data loading and transferring data between instances. Only use it for mapping data during loading.
            [LOAD: No]
            [JUSTIFICATION: This field is deprecated]
            [REPLACEMENT OBJECT API: NA]
            [REPLACEMENT FIELD API: NA]
            [COMMENTS: Asana link https://app.asana.com/1/7934919496419/project/1150819886958569/task/1207126408685378?focus=true
                Reason - [Tech debt] Deprecate MR Comps component and associated data
                Version - v54]</description>
    <externalId>true</externalId>
    <inlineHelpText>This hidden field is used for data loading and transferring data between instances. Only use it for mapping data during loading.</inlineHelpText>
    <label>Z_Unused_2508 _External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>